# WebServer

./: CMakeLists.txt  README.md  http_protocol.hpp  http_request.cpp  http_request.hpp  main.cpp  reactor.hpp  safe_queue.hpp  server.hpp  thread_pool.hpp  utility.hpp  web_server.cpp  web_server.hpp
web/: index.html  news.html
